Switching to JUnit5, AssertJ and testfx